--- a/style.css
+++ b/style.css
@@ -8,3 +8,13 @@ html, body {
   margin: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
 }
+
+h2 {
+  color: darkgreen;
+  text-transform: uppercase;
+}
+
+#agenda {
+  padding: 32px 24px;
+}
+#agenda ul { line-height: 1.9; }
